# work-stealing-queue

./: CMakeLists.txt  LICENSE  README.md  wsq.hpp
examples/: wsq.cpp
unittests/: wsq.cpp
